# How2use

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  WorldTest.cpp
example/SGM/: Example_Specification.cpp  Example_Specification.hpp  Test_Specification.hpp
guide/: CMakeLists.txt  WorldTest.cpp
guide/SGM/: Guide_How2use.cpp  Guide_How2use.hpp
include/SGM/: How2use.hpp  Specification.hpp
lib/: CMakeLists.txt  How2use.cpp  Specification.cpp
